tests/baselines/reference/errorLocationForInterfaceExtension.errors.txt
errorLocationForInterfaceExtension.ts(3,21): error TS2840: An interface cannot extend a primitive type like 'string'. It can only extend other named object types.


==== errorLocationForInterfaceExtension.ts (1 errors) ====
    var n = '';
    
    interface x extends string { }
                        ~~~~~~
!!! error TS2840: An interface cannot extend a primitive type like 'string'. It can only extend other named object types.
    